RESOLVED FIXED132366
[Cocoa] Crash when invoking a method with an unsigned parameter on a remote object
https://bugs.webkit.org/show_bug.cgi?id=132366
Summary [Cocoa] Crash when invoking a method with an unsigned parameter on a remote o...
mitz
Reported 2014-04-29 16:24:54 PDT
[Cocoa] Crash when invoking a method with an unsigned parameter on a remote object
Attachments
Handle unsigned parameters (3.45 KB, patch)
2014-04-29 16:28 PDT, mitz
andersca: review+
mitz
Comment 1 2014-04-29 16:25:37 PDT
mitz
Comment 2 2014-04-29 16:28:54 PDT
Created attachment 230437 [details] Handle unsigned parameters
mitz
Comment 3 2014-04-29 16:42:15 PDT
Note You need to log in before you can comment on or make changes to this bug.