<rdar://problem/16745596> [Cocoa] Crash when invoking a method with an unsigned parameter on a remote object https://bugs.webkit.org/show_bug.cgi?id=132366

Reviewed by Anders Carlsson.

* Shared/API/Cocoa/WKRemoteObjectCoder.mm:
(encodeInvocation): Handle the 'I' type code. Interpret the 'q' and 'Q' type codes in an
architecture-independent manner.
(decodeInvocationArguments): Ditto.



Canonical link: https://commits.webkit.org/150374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167968 268f45cc-cd09-0410-ab3c-d52691b4dbfc